1st version of time series
Issue #3488